# PyTorchDeploy

./: README.MD
deploy/: CMakeLists.txt
deploy/src/: Deploy.cpp  InferContext.h
export/: Export.py  ExtractFeatures.py  resnet.py
